--- a/app/views/art/index.html.erb
+++ b/app/views/art/index.html.erb
@@ -40,6 +40,9 @@
 
   <% unless @image_ori.blank? %>
   <div class="row" style="text-align: center;">
+    <div class="col s12 m6 offset-m3">
+      <h1>Enjoy!</h1>
+    </div>
     <div class="col s12 m3 offset-m3">
       <%= image_tag @image_ori.source.art.url, style: "width: 384px;" %>
     </div>
