--- a/app/views/art/index.html.erb
+++ b/app/views/art/index.html.erb
@@ -9,9 +9,9 @@
           </p>
         </div>
         <div class="card-action">
-          <a href="#"><i class="fab fa-twitter"></i> @DonOneFallen</a>
-          <a href="#"><i class="fab fa-twitch"></i> DonOneFallen</a>
-          <a href="#"><i class="fab fa-instagram"></i> DonOneFallen</a>
+          <a href="https://twitter.com/dononefallen" target="_blank"><i class="fab fa-twitter"></i> @DonOneFallen</a>
+          <a href="https://twitch.tv/dononefallen" target="_blank"><i class="fab fa-twitch"></i> DonOneFallen</a>
+          <a href="https://instagram.com/dononefallen" target="_blank"><i class="fab fa-instagram"></i> DonOneFallen</a>
         </div>
       </div>
       <% unless params[:error].blank? %>
