--- a/app/views/art/index.html.erb
+++ b/app/views/art/index.html.erb
@@ -3,9 +3,9 @@
     <div class="col s12 m6 offset-m3">
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
-          <span class="card-title">Transform your image to Ascii Art for Free</span>
+          <span class="card-title">Transform your portrait to Ascii Braille Art for Free</span>
           <p>
-            Simple!!. Just upload your image, I will take care of it.
+            Simple!!. Just upload your portrait, I will take care of it.
           </p>
         </div>
         <div class="card-action">
