--- a/app/views/art/index.html.erb
+++ b/app/views/art/index.html.erb
@@ -23,6 +23,12 @@
     </div>
   </div>
   <%= form_tag('/art', method: :post, multipart: true) do %>
+  <p style="text-align: center;">
+    <label>
+      <input type="checkbox" class="filled-in" name="inverted" />
+      <span>Inverted</span>
+    </label>
+  </p>
   <div class="btn waves-effect waves-light btn-large">
     <div class="file-field">
       <i class="material-icons">attach_file</i>
