--- a/app/views/art/index.html.erb
+++ b/app/views/art/index.html.erb
@@ -7,6 +7,15 @@
           <p>
             Simple!!. Just upload your portrait, I will take care of it.
           </p>
+          <br><br>
+          <span class="card-title">Consider this!</span>
+          <p>
+            1. The more contrast between dark and light colors you image have the better!
+            2. This will give you a 64xY character long ascii art string
+            3. It may tarnsform your portrait but again only if the contrast between dark and light colors is good.
+            4. This will not work for complex images like landscapes.
+          </p>
+
         </div>
         <div class="card-action">
           <a href="https://twitter.com/dononefallen" target="_blank"><i class="fab fa-twitter"></i> @DonOneFallen</a>
