--- a/app/views/art/index.html.erb
+++ b/app/views/art/index.html.erb
@@ -3,18 +3,18 @@
     <div class="col s12 m6 offset-m3">
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
-          <span class="card-title">Transform your portrait to Ascii Braille Art for Free</span>
+          <span class="card-title">Transform your logo or portrait to Ascii Braille Art for Free</span>
           <p>
             Simple!!. Just upload your portrait, I will take care of it.
           </p>
           <br><br>
           <span class="card-title">Consider this!</span>
-          <p>
-            1. The more contrast between dark and light colors you image have the better!
-            2. This will give you a 64xY character long ascii art string
-            3. It may tarnsform your portrait but again only if the contrast between dark and light colors is good.
-            4. This will not work for complex images like landscapes.
-          </p>
+          <ul>
+            <li>1. The more contrast between dark and light colors you image have the better!</li>
+            <li>2. This will give you a 64xY character long ascii art string</li>
+            <li>3. It may tarnsform your portrait but again only if the contrast between dark and light colors is good.</li>
+            <li>4. This will not work for complex images like landscapes.</li>
+          </ul>
 
         </div>
         <div class="card-action">
