--- a/app/views/art/index.html.erb
+++ b/app/views/art/index.html.erb
@@ -14,6 +14,7 @@
             <li>2. This will give you a 64xY character long ascii art string</li>
             <li>3. It may tarnsform your portrait but again only if the contrast between dark and light colors is good.</li>
             <li>4. This will not work for complex images like landscapes.</li>
+            <li>5. You may need to remove some characters left and right to fit a chat.</li>
           </ul>
 
         </div>
